<?xml version="1.0"?>
<package format="2">
  <name>radar_pa</name>
  <version>1.0.0</version>
  <description>ProAuto radar package</description>
  <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>
  <maintainer email="kahag@hrz.tu-chemnitz.de">Karim Haggag</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>radar_pa_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>radar_pa_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>radar_pa_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <doc_depend>doxygen</doc_depend>
  <doc_depend>radar_pa_msgs</doc_depend>

</package>
